2011-02-20  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to issue #17677: htmlArea RTE: Classes configuration is loaded twice

2011-02-20  Jigal van Hemert  <jigal@xs4all.nl>

	* Fixed bug #17498: The refresh login dialogue is shown even if the session already timed out (Thanks to Helmut Hummel)

2011-02-19  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #17676: htmlArea RTE: Some combo stores are loaded twice
	* Fixed bug #17677: htmlArea RTE: Classes configuration is loaded twice

2011-02-19  Christian Kuhn  <lolli@schwarzbuch>

	* Fixed bug #17671: Remove deprecated file typo3/contrib/json/json.php
	* Fixed bug #17656: Unit test fails because of invalid clear.gif (Thanks to Alexander Stehlik)
	* Fixed bug #17647: Method bytes() in tslib_cObj is deprecated and should be removed (Thanks to Peter Beernink)
	* Fixed bug #17645: Remove deprecated function formatSize() from t3lib_basicFileFunctions (Thanks to Peter Beernink)
	* Fixed bug #17644: Remove deprecated function getCountCacheTables() in SC_mod_web_ts_index (Thanks to Peter Beernink)

2011-02-18  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #17658: htmlArea RTE: Write troubleshooting messages to JavaScript console
	* Fixed issue #17659: htmlArea RTE: Delete deprecated plugin information variables
	* Fixed issue #17660: htmlArea RTE: Delete deprecated color conversion function aliases
	* Follow-up to issue #17559: htmlArea RTE: Delete deprecated code/functions from main js script

2011-02-17  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #17592: ExtDirect API calls are splitted in single requests and slows down page loading

2011-02-17  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #17616: htmlArea RTE: Link dialogue doesn't open when anchor class is set with double quotes

2011-02-17  Oliver Hader  <oliver.hader@typo3.org>

	* Fixed bug #17355: Dependencies in sysext 'version' and 'workspaces'
	* Fixed bug #17244: Error Message while Updating 4.4.6 > 4.5
